fix: fix footer, spacing and image size

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   background-color: transparent;
@@ -72,10 +72,11 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: space-around;
-    padding: 5rem;
+    padding: 1rem;
   }
 
   .content-image {
+    width: 90%;
     margin: 5rem 0;
   }
 }
